<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdjustComparisonSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adjust Comparison Settings"
            android:textSize="24sp"
            android:paddingBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewYearlySalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yearly Salary"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextYearlySalaryWgt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Weight for Yearly Salary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewYearlyBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yearly Bonus"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextYearlyBonusWgt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Weight for Yearly Bonus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTrainingFund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Training and Development Fund"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextTrainingFundWgt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Weight for Training Fund" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLeaveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Leave Time (days)"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextLeaveTimeWgt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Weight for Leave Time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTeleworkDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Telework Days per Week"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/editTextTeleworkDaysWgt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="Enter Weight for Telework Days" />
        </LinearLayout>

        <Button
            android:id="@+id/save_return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save and Return" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>