...

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/adjust_comparison_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adjust Comparison Settings" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
